[bug] fix white space in display mode

--- a/src/sass/layouts/_quick-edit.scss
+++ b/src/sass/layouts/_quick-edit.scss
@@ -1,5 +1,5 @@
 .l-quick-edit {
-  margin: 0 0 10em 0;
+  padding-bottom: 10em;
 }
 
 // --------------------------------------------------
